Adding the user Configuration Service

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.application.name=demo
-
+# Configuration de la source de données
 spring.datasource.url=jdbc:mysql://localhost:3306/todo_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+
+# Activer l'initialisation via schema.sql et data.sql
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=none
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
